# starter

./: .editorconfig  .gitignore  .tool-versions  README.md  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  poetry.toml  pyproject.toml  tsconfig.json
src/api/: index.py
src/app/: globals.css  layout.tsx  page.tsx
src/components/: HelloWorld.tsx
